Welcome alert removed

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <script type="text/javascript">
-$(document).ready(function(){alert("Welcome");
+$(document).ready(function(){
 	setInterval("startAnimation()", 500);
 });
 function startAnimation(){
